[workspace]
members = ["crates/*", "datasources/*", "decoders/*", "examples/*", "metrics/*"]
resolver = "2"

[workspace.package]
version = "0.9.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/sevenlabs-hq/carbon"

[workspace.dependencies]

# other
anyhow = "1.0"
askama = "0.14"
async-stream = "0.3"
async-trait = { version = "0.1" }
axum = "0.8"
base64 = "0.22"
bincode = "1.3"
borsh = { version = "1.5" }
borsh-derive-internal = "0.10"
bs58 = { version = "0.5", default-features = false }

# decoders
carbon-address-lookup-table-decoder = { path = "decoders/address-lookup-table-decoder", version = "0.9.1" }
carbon-associated-token-account-decoder = { path = "decoders/associated-token-account-decoder", version = "0.9.1" }
carbon-boop-decoder = { path = "decoders/boop-decoder", version = "0.9.1" }

# main
carbon-cli = { path = "crates/cli", version = "0.9.1" }
carbon-core = { path = "crates/core", version = "0.9.1" }
carbon-drift-v2-decoder = { path = "decoders/drift-v2-decoder", version = "0.9.1" }
carbon-fluxbeam-decoder = { path = "decoders/fluxbeam-decoder", version = "0.9.1" }
carbon-gavel-decoder = { path = "decoders/gavel-decoder", version = "0.9.1" }

# storage and api
carbon-gql-server = { path = "crates/gql-server", version = "0.9.1" }

# datasources
carbon-helius-atlas-ws-datasource = { path = "datasources/helius-atlas-ws-datasource", version = "0.9.1" }

# vendor
carbon-jito-protos = { path = "misc/jito-protos", version = "0.2.4" }
carbon-jito-shredstream-grpc-datasource = { path = "datasources/jito-shredstream-grpc-datasource", version = "0.9.1" }
carbon-jupiter-dca-decoder = { path = "decoders/jupiter-dca-decoder", version = "0.9.1" }
carbon-jupiter-limit-order-2-decoder = { path = "decoders/jupiter-limit-order-2-decoder", version = "0.9.1" }
carbon-jupiter-limit-order-decoder = { path = "decoders/jupiter-limit-order-decoder", version = "0.9.1" }
carbon-jupiter-perpetuals-decoder = { path = "decoders/jupiter-perpetuals-decoder", version = "0.9.1" }
carbon-jupiter-swap-decoder = { path = "decoders/jupiter-swap-decoder", version = "0.9.1" }
carbon-kamino-farms-decoder = { path = "decoders/kamino-farms-decoder", version = "0.9.1" }
carbon-kamino-lending-decoder = { path = "decoders/kamino-lending-decoder", version = "0.9.1" }
carbon-kamino-limit-order-decoder = { path = "decoders/kamino-limit-order-decoder", version = "0.9.1" }
carbon-kamino-vault-decoder = { path = "decoders/kamino-vault-decoder", version = "0.9.1" }
carbon-lifinity-amm-v2-decoder = { path = "decoders/lifinity-amm-v2-decoder", version = "0.9.1" }

# metrics
carbon-log-metrics = { path = "metrics/log-metrics", version = "0.9.1" }
carbon-macros = { path = "crates/macros", version = "0.9.1" }
carbon-marginfi-v2-decoder = { path = "decoders/marginfi-v2-decoder", version = "0.9.1" }
carbon-marinade-finance-decoder = { path = "decoders/marinade-finance-decoder", version = "0.9.1" }
carbon-memo-program-decoder = { path = "decoders/memo-program-decoder", version = "0.9.1" }
carbon-meteora-damm-v2-decoder = { path = "decoders/meteora-damm-v2-decoder", version = "0.9.1" }
carbon-meteora-dlmm-decoder = { path = "decoders/meteora-dlmm-decoder", version = "0.9.1" }
carbon-meteora-pools-decoder = { path = "decoders/meteora-pools-decoder", version = "0.9.1" }
carbon-moonshot-decoder = { path = "decoders/moonshot-decoder", version = "0.9.1" }
carbon-mpl-core-decoder = { path = "decoders/mpl-core-decoder", version = "0.9.1" }
carbon-mpl-token-metadata-decoder = { path = "decoders/mpl-token-metadata-decoder", version = "0.9.1" }
carbon-name-service-decoder = { path = "decoders/name-service-decoder", version = "0.9.1" }
carbon-okx-dex-decoder = { path = "decoders/okx-dex-decoder", version = "0.9.1" }
carbon-openbook-v2-decoder = { path = "decoders/openbook-v2-decoder", version = "0.9.1" }
carbon-orca-whirlpool-decoder = { path = "decoders/orca-whirlpool-decoder", version = "0.9.1" }
carbon-phoenix-v1-decoder = { path = "decoders/phoenix-v1-decoder", version = "0.9.1" }
carbon-postgres-client = { path = "crates/postgres-client", version = "0.9.1" }
carbon-proc-macros = { path = "crates/proc-macros", version = "0.9.1" }
carbon-prometheus-metrics = { path = "metrics/prometheus-metrics", version = "0.9.1" }
carbon-pump-swap-decoder = { path = "decoders/pump-swap-decoder", version = "0.9.1" }
carbon-pumpfun-decoder = { path = "decoders/pumpfun-decoder", version = "0.9.1" }
carbon-raydium-amm-v4-decoder = { path = "decoders/raydium-amm-v4-decoder", version = "0.9.1" }
carbon-raydium-clmm-decoder = { path = "decoders/raydium-clmm-decoder", version = "0.9.1" }
carbon-raydium-cpmm-decoder = { path = "decoders/raydium-cpmm-decoder", version = "0.9.1" }
carbon-raydium-launchpad-decoder = { path = "decoders/raydium-launchpad-decoder", version = "0.9.1" }
carbon-raydium-liquidity-locking-decoder = { path = "decoders/carbon-raydium-liquidity-locking-decoder", version = "0.9.1" }
carbon-raydium-stable-swap-decoder = { path = "decoders/raydium-stable-swap-decoder", version = "0.9.1" }
carbon-rpc-block-crawler-datasource = { path = "datasources/rpc-block-crawler-datasource", version = "0.9.1" }
carbon-rpc-block-subscribe-datasource = { path = "datasources/rpc-block-subscribe-datasource", version = "0.9.1" }
carbon-rpc-program-subscribe-datasource = { path = "datasources/rpc-program-subscribe-datasource", version = "0.9.1" }
carbon-rpc-transaction-crawler-datasource = { path = "datasources/rpc-transaction-crawler-datasource", version = "0.9.1" }
carbon-sharky-decoder = { path = "decoders/sharky-decoder", version = "0.9.1" }
carbon-solayer-restaking-program-decoder = { path = "decoders/solayer-restaking-program-decoder", version = "0.9.1" }
carbon-stabble-stable-swap-decoder = { path = "decoders/carbon-stabble-stable-swap-decoder", version = "0.9.1" }
carbon-stabble-weighted-swap-decoder = { path = "decoders/carbon-stabble-weighted-swap-decoder", version = "0.9.1" }
carbon-stake-program-decoder = { path = "decoders/carbon-stake-program-decoder", version = "0.9.1" }
carbon-system-program-decoder = { path = "decoders/system-program-decoder", version = "0.9.1" }
carbon-test-utils = { path = "crates/test-utils", version = "0.9.1" }
carbon-token-2022-decoder = { path = "decoders/token-2022-decoder", version = "0.9.1" }
carbon-token-program-decoder = { path = "decoders/token-program-decoder", version = "0.9.1" }
carbon-virtual-curve-decoder = { path = "decoders/virtual-curve-decoder", version = "0.9.1" }
carbon-virtuals-decoder = { path = "decoders/virtuals-decoder", version = "0.9.1" }
carbon-yellowstone-grpc-datasource = { path = "datasources/yellowstone-grpc-datasource", version = "0.9.1" }
carbon-zeta-decoder = { path = "decoders/zeta-decoder", version = "0.9.1" }

# misc
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
console = "0.16"
dialoguer = { version = "0.11", default-features = false, features = ["editor"] }
dotenv = "0.15"
env_logger = "0.11"
flate2 = "1.0"
futures = "0.3"
futures-util = "0.3"
heck = "0.5"
helius = { git = "https://github.com/helius-labs/helius-rust-sdk.git" }
hex = "0.4"
indicatif = "0.18"
inquire = "0.7"
juniper = { version = "0.16", features = ["uuid"] }
juniper_axum = { version = "0.2" }
juniper_codegen = { version = "0.16" }
juniper_graphql_ws = { version = "0.4", features = ["graphql-transport-ws"] }
log = "0.4"
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
paste = "1.0"
proc-macro2 = "1"
prost = "0.13"
prost-types = "0.13"
quote = "1.0"
retry = "2.0"
reqwest = { version = "0.12.5", features = ["json"] }
rust_decimal = { version = "1.37", features = ["db-postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5"
serde_json = "1.0"
sha2 = "0.10"

# solana
solana-account = "2.2"
solana-account-decoder = "2.2"
solana-account-decoder-client-types = "2.2"
solana-client = "2.2"
solana-clock = "2.2"
solana-commitment-config = "2.2"
solana-entry = "2.2"
solana-hash = "2.2"
solana-instruction = { version = "2.2", default-features = false }
solana-message = "2.2"
solana-native-token = "2.2"
solana-program = "2.2"
solana-program-pack = "2.2"
solana-pubkey = { version = "2.2", features = ["serde", "borsh", "curve25519"] }
solana-signature = { version = "2.2", features = ["rand"] }
solana-transaction = "2.2"
solana-transaction-context = "2.2"
solana-transaction-status = "2.2"
spl-memo = "6.0.0"
spl-token = "8.0.0"
sqlx = { version = "0.8.5", features = [
    "macros",
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "rust_decimal",
] }
sqlx_migrator = { version = "0.17", features = ["postgres"] }
syn = { version = "1.0", features = ["full"] }
thiserror = { version = "2.0", default-features = false }
tokio = { version = "1.46", features = ["rt", "time", "signal", "macros"] }
tokio-retry = "0.3"
tokio-util = "0.7"
tonic = { version = "0.12", features = ["tls", "tls-roots", "tls-webpki-roots"] }
tonic-build = "0.12"
unicode-xid = "0.2"
uuid = { version = "1.6.1", features = ["serde", "v7"] }
yellowstone-grpc-client = { version = "8.0" }
yellowstone-grpc-proto = { version = "8.0" }

[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"
