[package]
name = "carbon-memo-program-decoder"
version = "0.4.1"
description = "Memo Program Decoder"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
carbon-core = { workspace = true }
solana-sdk = { workspace = true }
serde = "1.0"
spl-token = "6.0.0"
spl-memo = "5.0.0"
