[package]
name = "carbon-raydium-clmm-decoder"
version = "0.4.1"
description = "Raydium CLMM Decoder"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["rlib"]

[dependencies]
carbon-core = { workspace = true }
carbon-proc-macros = { workspace = true }
carbon-macros = { workspace = true }
solana-sdk = { workspace = true }
serde = "1.0.136"
