[package]
name = "meteora-activities-carbon-example"
version = "0.2.1"
edition = "2021"

[dependencies]
carbon-core = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
solana-client = { workspace = true }
carbon-log-metrics = { workspace = true }
carbon-rpc-transaction-crawler-datasource = { workspace = true }
carbon-pumpfun-decoder = { workspace = true }
carbon-meteora-dlmm-decoder = { workspace = true }

yellowstone-grpc-proto = { workspace = true }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
log = "0.4.22"
env_logger = "0.11.5"
dotenv = "0.15.0"
