[package]
name = "pumpfun-alerts-carbon-example"
version = "0.2.1"
edition = "2021"

[dependencies]
carbon-core = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
solana-client = { workspace = true }
carbon-yellowstone-grpc-datasource = { workspace = true }
carbon-pumpfun-decoder = { workspace = true }

helius = { workspace = true }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"
yellowstone-grpc-proto = { version = "5" }
