[package]
name = "sharky-offers-carbon-example"
version = "0.2.1"
edition = "2021"

[dependencies]
carbon-core = { workspace = true }
carbon-rpc-program-subscribe-datasource = { workspace = true }
carbon-log-metrics = { workspace = true }
carbon-sharky-decoder = { workspace = true }
solana-client.workspace = true
solana-sdk.workspace = true
solana-account-decoder.workspace = true

async-trait = { workspace = true }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = "0.7"
dotenv = "0.15"
env_logger = "0.11"
