[package]
name = "carbon-prometheus-metrics"
version = "0.4.1"
description = "Prometheus Metrics"
license = "MIT"
edition = "2021"

[dependencies]
carbon-core = { workspace = true }

tokio = { workspace = true, features = ["full"] }
async-trait = "0.1"
log = "0.4"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

[lib]
crate-type = ["rlib"]
